--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # REACT_APP_LABTIF_API_HOST=https://labtif-api.gusdya.net/
-REACT_APP_LABTIF_API_HOST=http://127.0.0.1:5000
+REACT_APP_LABTIF_API_HOST=http://localhost:5000
 
 GOOGLE_CLIENT_ID = 407985831747-vv1uidfcsftar7701aolsbknfs9kqbmt.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = 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
