--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "react-avatar": "^5.0.3",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
-    "react-google-drive-picker": "^1.2.2",
     "react-icons": "^4.11.0",
     "react-jwt": "^1.2.0",
     "react-owl-carousel": "^2.3.3",
@@ -36,7 +35,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint"
   },
   "eslintConfig": {
     "extends": [
@@ -55,5 +55,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.55.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
